# MultiDoc-RAG-Pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py
docs/: transformer_architecture.md
src/rag/: __init__.py  chunker.py  embedder.py  generator.py  ingestor.py  retriever.py
src/rag/loaders/: __init__.py  markdown.py  pdf.py  plaintext.py  url.py
tests/: test_chunker.py  test_loaders.py  test_pipeline.py
ui/: app.py
